--- a/Zap/bread - Copia.html
+++ b/Zap/bread - Copia.html
@@ -112,7 +112,7 @@
 
 	</div>
 	<div id="ela">
-		Me perdoa por ter feito aquilo '-' <sub>08:45</sub>
+		Tudo bem contigo?? <sub>08:45</sub>
 	</div>
 
 
